[package]
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
categories = ["embedded", "network-programming"]
description = "A prototype implementation of the Host Identity Protocol v2 for bare metal systems."
documentation = ""
edition = "2018"
homepage = ""
keywords = ["security", "host", "identity", "embedded", "networking"]
license = "Apache 2.0 or MIT"
name = "rustdhipv2"
readme = "README.md"
repository = ""
version = "0.1.0"
# Each example should have an explicit `[[example]]` section here to
# ensure that the correct features are enabled.
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
managed = {version = "0.7", default-features = false, features = ["map"]}
byteorder = {version = "1.3.4", default-features = false}
log = { version = "0.4.4", default-features = false, optional = true}

generic-array = { version = "0.14"}
heapless = {version = "0.5.5"}
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp.git", branch = "master"}

# crypto dependencies
elliptic-curve = "0.8.4"
ecdsa = "0.10.2"
p256 = {version = "0.7.1", features = ["ecdsa"]}
p384 = "0.6.1"
sha2 = {version = "0.9.2", default-features = false}
sha-1 = {version = "0.9.2", default-features = false}
hmac = {version = "0.10.1", default-features = false}
aes = {version = "0.6.0", default-features = false}
block-modes = {version = "0.7.0", default-features= false}
hkdf = {version = "0.10.0", default-features = false}
rand = {version = "0.7"}    
rand_chacha = "0.3.0"
num-traits = "0.2.14"
num-bigint-dig = {version = "0.6.1"}

# debugging 
libc-print = "0.1.15"

[dev-dependencies]
env_logger = "0.8.2"
getopts = "0.2.21"

[features]
std = []
default = ["std", "log"]

[[example]]
name = "hip_initiator"

[[example]]
name = "hip_responder"



